integration_tests/codegen_fail/fail/subscription/wrong_item.stderr
error: #[graphql_subscription] attribute is applicable to non-trait `impl` blocks only
 --> $DIR/wrong_item.rs:3:1
  |
3 | #[graphql_subscription]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
